--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -5,7 +5,7 @@
 # https://github.com/actions/stale
 name: Mark stale issues and pull requests
 
-on: 
+on:
   workflow_call:
 
 jobs:
@@ -22,10 +22,10 @@ jobs:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           days-before-issue-stale: 30
           days-before-issue-close: 14
-          stale-issue-label: 'no-issue-activity'
-          stale-issue-message: 'This issue is stale because it has been open for 30 days and has no activity. If it remains inactive, it will be closed in 14 days.'
-          close-issue-message: 'This issue has been closed because it has been inactive for 14 days since being marked as stale.'
+          stale-issue-label: "no-issue-activity"
+          stale-issue-message: "This issue is stale because it has been open for 30 days and has no activity. If it remains inactive, it will be closed in 14 days."
+          close-issue-message: "This issue has been closed because it has been inactive for 14 days since being marked as stale."
           days-before-pr-stale: 30
           days-before-pr-close: -1
-          stale-pr-label: 'no-pr-activity'
-          stale-pr-message: 'This pull request is stale because it has been open for 30 days and has no activity.'
+          stale-pr-label: "no-pr-activity"
+          stale-pr-message: "This pull request is stale because it has been open for 30 days and has no activity."
